--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 elm-stuff
 # elm-repl generated files
 repl-temp-*
+
+# sass files
+.sass-cache
+
+# compile artefacts
+elm.js
+styles.css
+styles.css.map
